[tool.poetry]
name = "manifold"
version = "0.6.0"
description = ""
authors = ["Erik Haliewicz <ehal256@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
imgui = "1.4.1"
pyopengl = "3.1.6"
pysdl2 = "0.9.6"
pysdl2-dll = "2.24.0"
numpy = "^1.26.1"
shapely = "^2.0.2"
pillow = "^10.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
